--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to Entrepre Homepage
-description: Feel free to bookmark this 
+description: Feel free to bookmark
